# fastApi

./: Dockerfile  README.md  app.db  archive.sh  dev-env.yml  docker-compose.yml  docker_run_tests.sh  pyproject.toml  setup.cfg
