[tool.poetry]
name = "backend"
version = "0.0.1"
description = ""
authors = ["John Muddle <jmuddle@viascience.com>"]

packages = [
    { include = "backend"}
]

[tool.poetry.dependencies]
python = "^3.6.1"
fastapi = {extras = ["all"], version = "^0.63.0"}
uvicorn = {extras = ["all"], version = "^0.13.2"}
databases = {extras = ["sqlite"], version = "^0.4.1"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
pre-commit = "^2.9.3"
ipdb = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
